--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,34 @@
-set-option -g default-command "bash --rcfile ~/.mike/.bashrc"
+# vim: set sw=2 et
+set-window-option -g mode-keys vi
 
-set -g status-bg white
-set -g status-fg black
+set -g default-command "bash --rcfile ~/.mike/.bashrc"
+set -sg escape-time 0
+
+set -g update-environment -r
+set -g base-index 1
+set -ga terminal-overrides ",*256col*:Tc"
+
+set -g status-left ''
+set -g status-fg white
+set -g status-bg black
+
+set -g window-status-format '#[fg=white] #I '
+set -g window-status-current-format '#[fg=black,bg=white] #I '
+set -g window-status-separator ' '
+
+set -g renumber-windows on
+
+bind v copy-mode \; \
+  send -X begin-selection \; \
+  send -X rectangle-toggle
+
+bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi i send -X cancel
+
+bind -T copy-mode-vi p \
+  send -X start-of-line \; \
+  send -X search-backward '$ '
+
+# Reload config
+bind r source ~/.mike/.tmux.conf \; \
+  display 'Sourced tmux configuration file.'
