Add launch joplin script

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,17 @@
 # vim: set sw=2 et
-set-window-option -g mode-keys vi
-
-set -g default-command "bash --rcfile ~/.mike/.bashrc"
+setw -g mode-keys vi
 set -sg escape-time 0
-
+set -g default-command "bash --rcfile ~/.mike/.bashrc"
 set -g update-environment -r
 set -g base-index 1
-set -ga terminal-overrides ",*256col*:Tc"
-
-set -g status-left ''
+set -g status-left '#[bold][#S] '
 set -g status-fg white
 set -g status-bg black
-
 set -g window-status-format '#[fg=white] #I '
-set -g window-status-current-format '#[fg=black,bg=white] #I '
+set -g window-status-current-format '#[fg=black,bg=white,bold] #I '
 set -g window-status-separator ' '
-
 set -g renumber-windows on
+set -ga terminal-overrides ",*256col*:Tc"
 
 bind v copy-mode \; \
   send -X begin-selection \; \
@@ -29,6 +24,5 @@ bind -T copy-mode-vi p \
   send -X start-of-line \; \
   send -X search-backward '$ '
 
-# Reload config
 bind r source ~/.mike/.tmux.conf \; \
   display 'Sourced tmux configuration file.'
