--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # vim: set sw=2 et
+# a lot of inspiration from: https://gist.github.com/spicycode/1229612
+
 setw -g mode-keys vi
-set -sg escape-time 0
+setw -g automatic-rename on
+set -g base-index 1
+set -g set-titles on
 set -g default-command "bash --rcfile ~/.mike/.bashrc"
 set -g update-environment -r
 set -g base-index 1
@@ -12,17 +16,41 @@ set -g window-status-current-format '#[fg=black,bg=white,bold] #I '
 set -g window-status-separator ' '
 set -g renumber-windows on
 set -ga terminal-overrides ",*256col*:Tc"
+set -sg escape-time 0
 
-bind v copy-mode \; \
-  send -X begin-selection \; \
-  send -X rectangle-toggle
+#bind -r k select-pane -U
+#bind -r j select-pane -D
+#bind -r h select-pane -L
+#bind -r l select-pane -R
+#
+#bind v copy-mode \; \
+#  send -X begin-selection \; \
+#  send -X rectangle-toggle
+#
+#bind -T copy-mode-vi Escape send -X cancel
+#bind -T copy-mode-vi i send -X cancel
+#
+#bind -T copy-mode-vi p \
+#  send -X start-of-line \; \
+#  send -X search-backward '$ '
+#
+#bind r source ~/.mike/.tmux.conf \; \
+#  display 'Sourced tmux configuration file.'
 
-bind -T copy-mode-vi Escape send -X cancel
-bind -T copy-mode-vi i send -X cancel
+bind v split-window -h
+bind s split-window -v
 
-bind -T copy-mode-vi p \
-  send -X start-of-line \; \
-  send -X search-backward '$ '
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind H resize-pane -L 5
+bind L resize-pane -R 5
 
-bind r source ~/.mike/.tmux.conf \; \
-  display 'Sourced tmux configuration file.'
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
