--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *.swp
-
-.viminfo
-.vim/.netrwhist
-
 .config/Code/
+.viminfo
+.vim/
 .cache/
-
+.pki/
+.bash_history
+%*
 .local/share/gvfs-metadata/
 .local/share/Trash
