--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,20 +21,17 @@ set -sg escape-time 0
 #bind -r j select-pane -D
 #bind -r h select-pane -L
 #bind -r l select-pane -R
-#
-#bind v copy-mode \; \
-#  send -X begin-selection \; \
-#  send -X rectangle-toggle
-#
-#bind -T copy-mode-vi Escape send -X cancel
-#bind -T copy-mode-vi i send -X cancel
-#
-#bind -T copy-mode-vi p \
-#  send -X start-of-line \; \
-#  send -X search-backward '$ '
-#
-#bind r source ~/.mike/.tmux.conf \; \
-#  display 'Sourced tmux configuration file.'
+
+bind v copy-mode \; \
+  send -X begin-selection \; \
+  send -X rectangle-toggle
+
+bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi i send -X cancel
+
+bind -T copy-mode-vi p \
+  send -X start-of-line \; \
+  send -X search-backward '$ '
 
 bind v split-window -h
 bind s split-window -v
