--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 bin/
 .vscode/
 .local/share/gvfs-metadata/
-.local/share/Trash
-.local/share/flatpak
+.local/share/Trash/
+.local/share/flatpak/
 .config/
 .less*
 .wget-*
