--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,24 +3,19 @@
 
 setw -g mode-keys vi
 setw -g automatic-rename on
+set -ag terminal-overrides ',*256col*:Tc'
+set -sg escape-time 0
+#set -g default-shell 'bash -c ~/.mike/activate'
 set -g base-index 1
 set -g set-titles on
 set -g update-environment -r
-set -g base-index 1
-set -g status-left '#[bold][#S] '
-set -g status-fg white
-set -g status-bg black
+set -g renumber-windows on
 set -g window-status-format '#[fg=white] #I '
 set -g window-status-current-format '#[fg=black,bg=white,bold] #I '
 set -g window-status-separator ' '
-set -g renumber-windows on
-set -ga terminal-overrides ",*256col*:Tc"
-set -sg escape-time 0
-
-#bind -r k select-pane -U
-#bind -r j select-pane -D
-#bind -r h select-pane -L
-#bind -r l select-pane -R
+set -g status-left '#[bold][#S] '
+set -g status-fg white
+set -g status-bg black
 
 bind v copy-mode \; \
   send -X begin-selection \; \
@@ -36,10 +31,10 @@ bind -T copy-mode-vi p \
 bind v split-window -h
 bind s split-window -v
 
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind H resize-pane -L 5
-bind L resize-pane -R 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
 
 bind h select-pane -L
 bind j select-pane -D 
