--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,13 @@
-# vim: set sw=2 et
-# a lot of inspiration from: https://gist.github.com/spicycode/1229612
+# vim: ts=2 et
+#
 
 setw -g mode-keys vi
 setw -g automatic-rename on
 set -ag terminal-overrides ',*256col*:Tc'
 set -sg escape-time 0
-#set -g default-shell 'bash -c ~/.mike/activate'
-set -g base-index 1
-set -g set-titles on
 set -g update-environment -r
+set -g set-titles on
+set -g base-index 1
 set -g renumber-windows on
 set -g window-status-format '#[fg=white] #I '
 set -g window-status-current-format '#[fg=black,bg=white,bold] #I '
@@ -16,6 +15,7 @@ set -g window-status-separator ' '
 set -g status-left '#[bold][#S] '
 set -g status-fg white
 set -g status-bg black
+set -g default-command '/bin/bash --rcfile ~/.mike/.activate'
 
 bind v copy-mode \; \
   send -X begin-selection \; \
@@ -28,13 +28,15 @@ bind -T copy-mode-vi p \
   send -X start-of-line \; \
   send -X search-backward '$ '
 
+bind m set -g mouse \; \
+  display "Mouse: #{?mouse,ON,OFF}"
+
+bind u capture-pane \; \
+  save-buffer /tmp/tmux-buffer \; \
+  new-window -n 'urlview' '$SHELL -c "urlview < /tmp/tmux-buffer"'
+
 bind v split-window -h
 bind s split-window -v
-
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r H resize-pane -L 5
-bind -r L resize-pane -R 5
 
 bind h select-pane -L
 bind j select-pane -D 
@@ -45,3 +47,8 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D 
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
