--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@
 
 setw -g mode-keys vi
 setw -g automatic-rename on
-set -ag terminal-overrides ',*256col*:Tc'
-set -sg escape-time 0
+set -g terminal-overrides ',*256col*:Tc'
+set -g escape-time 0
 set -g update-environment -r
 set -g set-titles on
 set -g base-index 1
