--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,52 +1,27 @@
 # vim: ts=2 et
-#
+# ~/.tmux.conf
 
 setw -g mode-keys vi
-setw -g automatic-rename on
-set -g terminal-overrides ',*256col*:Tc'
 set -g escape-time 0
-set -g update-environment -r
-set -g set-titles on
 set -g base-index 1
 set -g renumber-windows on
-set -g window-status-format '#[fg=white] #I '
-set -g window-status-current-format '#[fg=black,bg=white,bold] #I '
-set -g window-status-separator ' '
-set -g status-left '#[bold][#S] '
-set -g status-fg white
-set -g status-bg black
-set -g default-command '/bin/bash --rcfile ~/.mike/.activate'
 
-bind v copy-mode \; \
-  send -X begin-selection \; \
-  send -X rectangle-toggle
-
-bind -T copy-mode-vi Escape send -X cancel
-bind -T copy-mode-vi i send -X cancel
-
-bind -T copy-mode-vi p \
-  send -X start-of-line \; \
-  send -X search-backward '$ '
-
-bind m set -g mouse \; \
-  display "Mouse: #{?mouse,ON,OFF}"
-
-bind u capture-pane \; \
-  save-buffer /tmp/tmux-buffer \; \
-  new-window -n 'urlview' '$SHELL -c "urlview < /tmp/tmux-buffer"'
+#setw -g automatic-rename on
+#set -g update-environment -r
+#set -g set-titles on
 
 bind v split-window -h
 bind s split-window -v
+
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D 
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
 
 bind h select-pane -L
 bind j select-pane -D 
 bind k select-pane -U
 bind l select-pane -R
-
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
 
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
